<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Plantas</string>
    <string name="hello_world">Enciclopedia de plantas</string>
    <string name="btn_ordenar_familia">Ordenar por familia</string>
    <string name="btn_ordenar_nombre">Ordenar por nombre</string>
    <string name="descripcion_img">imagen principal</string>
    <string name="title_activity_ver_detalle">Ver detalle</string>
    <string name="buscar_planta">Buscar planta</string>
    <string name="lbl_nombre_planta">Nombre</string>
    <string name="lbl_nombre_cientifico_planta">Nombre cientifico</string>
    <string name="lbl_tipo_planta">Tipo</string>
    <string name="lbl_desc_planta">Descripción</string>
    <string name="lbl_familia_planta">Familia</string>
    <string name="lbl_info_planta">Información adicional</string>
    <string name="btn_nueva_planta">Nueva planta</string>
<<<<<<< HEAD
	<string name="editar">Editar</string>
	<string name="borrar">Eliminar</string>
	<string name="BottonEditar">Boton editar</string>
	<string name="Salir">Salir</string>
	<string name="guardar">guardar</string>
=======
    <string name="editar">Editar</string>
    <string name="borrar">Eliminar</string>
    <string name="opc_continuar">Continuar</string>
    <string name="opc_cancelar">Cancelar</string>
    <string name="opt_borrar">Operacion de borrado</string>
    <string name="opt_borrar_desc">ESta operación no se puede revertir</string>
    <string name="title_activity_editar_planta">Editar planta</string>
    <string name="hacer_foto">Hacer foto</string>

>>>>>>> refs/remotes/origin/master
</resources>
