<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/editar"
        android:checked="false"
        android:enabled="true"
        android:showAsAction="ifRoom|collapseActionView"
        android:title="@string/editar"
        android:visible="true">
    </item>
    <item
        android:id="@+id/guardar"
        android:checked="false"
        android:enabled="true"
        android:showAsAction="ifRoom|collapseActionView"
        android:title="@string/guardar"
        android:visible="true">
    </item>
    <item
        android:id="@+id/eliminar"
        android:checked="false"
        android:enabled="true"
        android:showAsAction="ifRoom|collapseActionView"
        android:title="@string/borrar"
        android:visible="true">
    </item>

</menu>